Fixed cutoff on services page for mobile

--- a/meteorhq/meteorhq.css
+++ b/meteorhq/meteorhq.css
@@ -94,7 +94,7 @@ footer input[type="text"] {
 
 .full-page-photo .jumbotron {
 	position: fixed;
-	top: 140px;
+	top: 110px;
 	background-color: transparent;
 	color: white;
 	margin-bottom: 0;
